--- a/index.html
+++ b/index.html
@@ -13,7 +13,75 @@
 </head>
 
 <body>
-	<h1>Howdy FED2122</h1>
+
+	<header>
+		 <img src="images/km-logo.png" alt="Logo van Kookmutsjes"> <!--Hier moet nog een link aan toegevoegd worden naar de homepagina -->
+
+		<nav>
+		<ul>
+			<li>Recepten</li>
+			<li>Stories</li>
+			<li>Tools</li>
+			<li>Community</li> 
+		</ul>
+	</nav>
+	<img src="images/Mini-appelkruimel-cheesecakes-Kookmutsjes-1536x1104.png" alt="Foto van het gerecht genaamd Appelruimel cheesecakes">
+	<p>Mini appelkruimel cheesecakes</p>
+	<p>Dit zijn mijn nieuwe favoriete mini cheesecakes dit seizoen, appelkruimel cheesecakes! Ze zijn simpel te maken, ontzettend lekker van smaak en super snoezig! Als jij ook van de warme smaken houdt, 
+		zit je hier goed!</p> <!--hier die ene dingens neerzetten van limiet aantal characters showen.-->
+	<img src="images/Aardappels-met-kip-pesto-Kookmutsjes-1536x1088.png" alt="Foto van het gerecht genaamd Aardappels met kip pesto">
+Gevulde aardappels met kip en pesto</p>
+	<p>Dit is ook weer zo’n heerlijk en makkelijk recept uit de oven! Gevulde aardappels met kip en pesto waar je gegarandeerd van zult smullen! 
+		Het is verrassend lekker van smaak, vooral wanneer je dol bent op deze combinatie!</p>
+	<img src="images/Turkse-linzensoep-Kookmutsjes-768x560.png" alt="Foto van het gerecht genaamd Turkse linzensoep">
+	<p>Turkse linzensoep (mercimek corbasi)</p>
+	<p>De tijd van het jaar is weer aangebroken waarin je graag geniet van een warme kom soep. Deze versie van de klassieke Turkse rode linzensoep is eenvoudig, smaakvol, verantwoord en zeer voedzaam en staat bekend onder de naam Kırmızı Mercimek Çorbası. 
+		Als je van gemak houdt dan is dit gerecht ideaal voor jou want het is snel om te maken, vullend en ook nog eens goedkoop.</p>
+
+
+		<h1>Nieuwe recepten</h1>
+<article> 
+	<img src="images/Speculaas-cheesecakes-met-koekkruimels-en-kersenvlaai-Kookmutsjes-1024x730.png" alt="Speculaas cheesecakes met kruimels en kersenvlaai">
+<p>SPECULAAS-KRUIMEL CHEESECAKES</p>
+	<p>By Najat</p>
+	<p>Als je dit weekend van plan bent om te gaan bakken, bak dan deze snoezige speculaas-kruimel cheesecakes! 
+		Ze zijn zo lekker! Met een stevige koekjesbodem, 
+		zachte cheesecake en een vulling van kersenvlaai worden ze ook nog eens afgemaakt met krokante koekkruimels! Too good!</p>
+
+	<img src="images/Bloemkool-kerrieschotel-met-gehakt-1024x706.png" alt="Bloemkool kerrieschotel met gehakt">
+	<p>BLOEMKOOL-KERRIESCHOTEL MET GEHAKT</p>
+	<p>By Najat</p>
+<p>Hier een ovenschotel waar het hele gezin dol op zal zijn! 
+	Zo makkelijk én zo lekker! 
+	Deze bloemkool-kerrieschotel met gehakt zit vol smaak en is een grote favoriet van de kids, big time! 
+	Serveer met je favoriete salade en je hebt een doordeweekse maaltijd!</p>
+
+	<img src="images/Kip-souvlaki-Kookmutsjes-1024x699.png" alt="Kip souvlaki">
+	<p>KIP SOUVLAKI</p>
+	<p>By Najat</p>
+<p>Dit is een van de makkelijkste maaltijden die je zelf kunt maken! 
+	Daarnaast zal bijna iedereen hier dol op zijn, want dit recept voor Griekse souvlaki is koolhydraatarm, glutenvrij, 
+	dieetvriendelijk en gezond! Een must voor elke liefhebber!</p>
+
+	<img src="images/Fusilli-met-kip-in-saus-Kookmutsjes-1024x727.png" alt="Fusilli met kip in saus">
+	<p>FUSILLI MET KIP IN SAUS</p>
+	<p>By Najat</p>
+	<p>Dit moet je proberen! Deze pasta met kip in een romige saus is heerlijk! 
+		Er gaat niets boven een zelfgemaakte saus en het is zo eenvoudig te maken. 
+		Als jij nog niet weet welk gerecht op tafel komt vandaag, dan heb ik nu dit recept voor je!
+	</p>
+
+	<img src="images/Ei-wrap-met-gehakt-Kookmutsjes-1024x730.png" alt="Ei wrap met gehakt">
+	<p>EI-WRAP MET GEHAKT</p>
+	<p>By Najat</p>
+	<p>Als je vandaag een makkelijk en lekker recept wilt maken, I’ve got you covered! 
+	Deze ei-wrap met gehakt always hits the spot en kan in slechts 20 minuten van jou zijn!</p>
+<!-- datum toevoegen, amount of comments, lees meer-bewaar-heart-- button toevoegen en a link-->
+
+</article>
+
+	</header>
+	
 
 	<script src="scripts/script.js"></script>
 </body>
